// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hash_index.sql > line 13 1`] = `
[
  "CREATE TABLE hash_name_heap (
	seqno 		int4,
	random 		name
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "hash_name_heap",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "seqno",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "random",
                  "is_local": true,
                  "location": 46,
                  "typeName": {
                    "location": 55,
                    "names": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 18 1`] = `
[
  "CREATE TABLE hash_txt_heap (
	seqno 		int4,
	random 		text
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "hash_txt_heap",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "seqno",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 38,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "random",
                  "is_local": true,
                  "location": 45,
                  "typeName": {
                    "location": 54,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 23 1`] = `
[
  "CREATE TABLE hash_f8_heap (
	seqno		int4,
	random 		float8
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "hash_f8_heap",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "seqno",
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "random",
                  "is_local": true,
                  "location": 43,
                  "typeName": {
                    "location": 52,
                    "names": [
                      {
                        "String": {
                          "sval": "float8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 47 1`] = `
[
  "CREATE INDEX hash_i4_index ON hash_i4_heap USING hash (random int4_ops)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "hash",
            "idxname": "hash_i4_index",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "random",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "opclass": [
                    {
                      "String": {
                        "sval": "int4_ops",
                      },
                    },
                  ],
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 30,
              "relname": "hash_i4_heap",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 49 1`] = `
[
  "CREATE INDEX hash_name_index ON hash_name_heap USING hash (random name_ops)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "hash",
            "idxname": "hash_name_index",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "random",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "opclass": [
                    {
                      "String": {
                        "sval": "name_ops",
                      },
                    },
                  ],
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 32,
              "relname": "hash_name_heap",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 51 1`] = `
[
  "CREATE INDEX hash_txt_index ON hash_txt_heap USING hash (random text_ops)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "hash",
            "idxname": "hash_txt_index",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "random",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "opclass": [
                    {
                      "String": {
                        "sval": "text_ops",
                      },
                    },
                  ],
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 31,
              "relname": "hash_txt_heap",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 53 1`] = `
[
  "CREATE INDEX hash_f8_index ON hash_f8_heap USING hash (random float8_ops)
  WITH (fillfactor=60)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "hash",
            "idxname": "hash_f8_index",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "random",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "opclass": [
                    {
                      "String": {
                        "sval": "float8_ops",
                      },
                    },
                  ],
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 60,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 82,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 30,
              "relname": "hash_f8_heap",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 60 1`] = `
[
  "create unique index hash_f8_index_1 on hash_f8_heap(abs(random))",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "hash_f8_index_1",
            "indexParams": [
              {
                "IndexElem": {
                  "expr": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "random",
                                },
                              },
                            ],
                            "location": 56,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "abs",
                          },
                        },
                      ],
                      "location": 52,
                    },
                  },
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 39,
              "relname": "hash_f8_heap",
              "relpersistence": "p",
            },
            "unique": true,
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 68 1`] = `
[
  "SELECT * FROM hash_i4_heap
   WHERE hash_i4_heap.random = 843938989",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "hash_i4_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_i4_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 56,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 843938989,
                    },
                    "location": 58,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 82 1`] = `
[
  "SELECT * FROM hash_name_heap
   WHERE hash_name_heap.random = '1505703298'::name",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "hash_name_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_name_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 38,
                  },
                },
                "location": 60,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 62,
                        "sval": {
                          "sval": "1505703298",
                        },
                      },
                    },
                    "location": 74,
                    "typeName": {
                      "location": 76,
                      "names": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 96 1`] = `
[
  "SELECT * FROM hash_txt_heap
   WHERE hash_txt_heap.random = '1351610853'::text",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "hash_txt_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_txt_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 37,
                  },
                },
                "location": 58,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 60,
                        "sval": {
                          "sval": "1351610853",
                        },
                      },
                    },
                    "location": 72,
                    "typeName": {
                      "location": 74,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 110 1`] = `
[
  "SELECT * FROM hash_f8_heap
   WHERE hash_f8_heap.random = '444705537'::float8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "hash_f8_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_f8_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 56,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 58,
                        "sval": {
                          "sval": "444705537",
                        },
                      },
                    },
                    "location": 69,
                    "typeName": {
                      "location": 71,
                      "names": [
                        {
                          "String": {
                            "sval": "float8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 137 1`] = `
[
  "UPDATE hash_i4_heap
   SET random = 1
   WHERE hash_i4_heap.seqno = 1492",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "hash_i4_heap",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 27,
                  "name": "random",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 36,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_i4_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 47,
                  },
                },
                "location": 66,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1492,
                    },
                    "location": 68,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 141 1`] = `
[
  "SELECT h.seqno AS i1492, h.random AS i1
   FROM hash_i4_heap h
   WHERE h.random = 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "h",
                  },
                  "inh": true,
                  "location": 48,
                  "relname": "hash_i4_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "i1492",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "seqno",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 25,
                  "name": "i1",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "random",
                          },
                        },
                      ],
                      "location": 25,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "h",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 72,
                  },
                },
                "location": 81,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 83,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 145 1`] = `
[
  "UPDATE hash_i4_heap
   SET seqno = 20000
   WHERE hash_i4_heap.random = 1492795354",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "hash_i4_heap",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 27,
                  "name": "seqno",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 20000,
                      },
                      "location": 35,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_i4_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 50,
                  },
                },
                "location": 70,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1492795354,
                    },
                    "location": 72,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 149 1`] = `
[
  "SELECT h.seqno AS i20000
   FROM hash_i4_heap h
   WHERE h.random = 1492795354",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "h",
                  },
                  "inh": true,
                  "location": 33,
                  "relname": "hash_i4_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "i20000",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "seqno",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "h",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 57,
                  },
                },
                "location": 66,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1492795354,
                    },
                    "location": 68,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 153 1`] = `
[
  "UPDATE hash_name_heap
   SET random = '0123456789abcdef'::name
   WHERE hash_name_heap.seqno = 6543",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "hash_name_heap",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 29,
                  "name": "random",
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "0123456789abcdef",
                          },
                        },
                      },
                      "location": 56,
                      "typeName": {
                        "location": 58,
                        "names": [
                          {
                            "String": {
                              "sval": "name",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_name_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 72,
                  },
                },
                "location": 93,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 6543,
                    },
                    "location": 95,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 157 1`] = `
[
  "SELECT h.seqno AS i6543, h.random AS c0_to_f
   FROM hash_name_heap h
   WHERE h.random = '0123456789abcdef'::name",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "h",
                  },
                  "inh": true,
                  "location": 53,
                  "relname": "hash_name_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "i6543",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "seqno",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 25,
                  "name": "c0_to_f",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "random",
                          },
                        },
                      ],
                      "location": 25,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "h",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 79,
                  },
                },
                "location": 88,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 90,
                        "sval": {
                          "sval": "0123456789abcdef",
                        },
                      },
                    },
                    "location": 108,
                    "typeName": {
                      "location": 110,
                      "names": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 161 1`] = `
[
  "UPDATE hash_name_heap
   SET seqno = 20000
   WHERE hash_name_heap.random = '76652222'::name",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "hash_name_heap",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 29,
                  "name": "seqno",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 20000,
                      },
                      "location": 37,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_name_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 52,
                  },
                },
                "location": 74,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 76,
                        "sval": {
                          "sval": "76652222",
                        },
                      },
                    },
                    "location": 86,
                    "typeName": {
                      "location": 88,
                      "names": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 168 1`] = `
[
  "SELECT h.seqno AS emptyset
   FROM hash_name_heap h
   WHERE h.random = '76652222'::name",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "h",
                  },
                  "inh": true,
                  "location": 35,
                  "relname": "hash_name_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "emptyset",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "seqno",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "h",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 61,
                  },
                },
                "location": 70,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 72,
                        "sval": {
                          "sval": "76652222",
                        },
                      },
                    },
                    "location": 82,
                    "typeName": {
                      "location": 84,
                      "names": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 172 1`] = `
[
  "UPDATE hash_txt_heap
   SET random = '0123456789abcdefghijklmnop'::text
   WHERE hash_txt_heap.seqno = 4002",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "hash_txt_heap",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 28,
                  "name": "random",
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 37,
                          "sval": {
                            "sval": "0123456789abcdefghijklmnop",
                          },
                        },
                      },
                      "location": 65,
                      "typeName": {
                        "location": 67,
                        "names": [
                          {
                            "String": {
                              "sval": "text",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_txt_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 81,
                  },
                },
                "location": 101,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 4002,
                    },
                    "location": 103,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 176 1`] = `
[
  "SELECT h.seqno AS i4002, h.random AS c0_to_p
   FROM hash_txt_heap h
   WHERE h.random = '0123456789abcdefghijklmnop'::text",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "h",
                  },
                  "inh": true,
                  "location": 53,
                  "relname": "hash_txt_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "i4002",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "seqno",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 25,
                  "name": "c0_to_p",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "random",
                          },
                        },
                      ],
                      "location": 25,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "h",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 78,
                  },
                },
                "location": 87,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 89,
                        "sval": {
                          "sval": "0123456789abcdefghijklmnop",
                        },
                      },
                    },
                    "location": 117,
                    "typeName": {
                      "location": 119,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 180 1`] = `
[
  "UPDATE hash_txt_heap
   SET seqno = 20000
   WHERE hash_txt_heap.random = '959363399'::text",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "hash_txt_heap",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 28,
                  "name": "seqno",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 20000,
                      },
                      "location": 36,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_txt_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 51,
                  },
                },
                "location": 72,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 74,
                        "sval": {
                          "sval": "959363399",
                        },
                      },
                    },
                    "location": 85,
                    "typeName": {
                      "location": 87,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 184 1`] = `
[
  "SELECT h.seqno AS t20000
   FROM hash_txt_heap h
   WHERE h.random = '959363399'::text",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "h",
                  },
                  "inh": true,
                  "location": 33,
                  "relname": "hash_txt_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "t20000",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "seqno",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "h",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 58,
                  },
                },
                "location": 67,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 69,
                        "sval": {
                          "sval": "959363399",
                        },
                      },
                    },
                    "location": 80,
                    "typeName": {
                      "location": 82,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 188 1`] = `
[
  "UPDATE hash_f8_heap
   SET random = '-1234.1234'::float8
   WHERE hash_f8_heap.seqno = 8906",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "hash_f8_heap",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 27,
                  "name": "random",
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 36,
                          "sval": {
                            "sval": "-1234.1234",
                          },
                        },
                      },
                      "location": 48,
                      "typeName": {
                        "location": 50,
                        "names": [
                          {
                            "String": {
                              "sval": "float8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_f8_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 66,
                  },
                },
                "location": 85,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 8906,
                    },
                    "location": 87,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 192 1`] = `
[
  "SELECT h.seqno AS i8096, h.random AS f1234_1234
   FROM hash_f8_heap h
   WHERE h.random = '-1234.1234'::float8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "h",
                  },
                  "inh": true,
                  "location": 56,
                  "relname": "hash_f8_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "i8096",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "seqno",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 25,
                  "name": "f1234_1234",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "random",
                          },
                        },
                      ],
                      "location": 25,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "h",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 80,
                  },
                },
                "location": 89,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 91,
                        "sval": {
                          "sval": "-1234.1234",
                        },
                      },
                    },
                    "location": 103,
                    "typeName": {
                      "location": 105,
                      "names": [
                        {
                          "String": {
                            "sval": "float8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 196 1`] = `
[
  "UPDATE hash_f8_heap
   SET seqno = 20000
   WHERE hash_f8_heap.random = '488912369'::float8",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "hash_f8_heap",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 27,
                  "name": "seqno",
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 20000,
                      },
                      "location": 35,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "hash_f8_heap",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 50,
                  },
                },
                "location": 70,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 72,
                        "sval": {
                          "sval": "488912369",
                        },
                      },
                    },
                    "location": 83,
                    "typeName": {
                      "location": 85,
                      "names": [
                        {
                          "String": {
                            "sval": "float8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 200 1`] = `
[
  "SELECT h.seqno AS f20000
   FROM hash_f8_heap h
   WHERE h.random = '488912369'::float8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "h",
                  },
                  "inh": true,
                  "location": 33,
                  "relname": "hash_f8_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "f20000",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "h",
                          },
                        },
                        {
                          "String": {
                            "sval": "seqno",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "h",
                        },
                      },
                      {
                        "String": {
                          "sval": "random",
                        },
                      },
                    ],
                    "location": 57,
                  },
                },
                "location": 66,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 68,
                        "sval": {
                          "sval": "488912369",
                        },
                      },
                    },
                    "location": 79,
                    "typeName": {
                      "location": 81,
                      "names": [
                        {
                          "String": {
                            "sval": "float8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 220 1`] = `
[
  "CREATE TABLE hash_split_heap (keycol INT)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "hash_split_heap",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "keycol",
                  "is_local": true,
                  "location": 30,
                  "typeName": {
                    "location": 37,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 226 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 230 1`] = `
[
  "DECLARE c CURSOR FOR SELECT * from hash_split_heap WHERE keycol = 1",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 256,
            "portalname": "c",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 35,
                      "relname": "hash_split_heap",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 28,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 28,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "keycol",
                            },
                          },
                        ],
                        "location": 57,
                      },
                    },
                    "location": 64,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 66,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 238 1`] = `
[
  "DELETE FROM hash_split_heap WHERE keycol = 1",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "hash_split_heap",
              "relpersistence": "p",
            },
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "keycol",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 41,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 43,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 241 1`] = `
[
  "VACUUM hash_split_heap",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 7,
                    "relname": "hash_split_heap",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 244 1`] = `
[
  "ALTER INDEX hash_split_index SET (fillfactor = 10)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "Integer": {
                                "ival": 10,
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "fillfactor",
                            "location": 34,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_INDEX",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "hash_split_index",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 248 1`] = `
[
  "DROP TABLE hash_split_heap",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "hash_split_heap",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 251 1`] = `
[
  "CREATE TEMP TABLE hash_temp_heap (x int, y int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "hash_temp_heap",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "x",
                  "is_local": true,
                  "location": 34,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "y",
                  "is_local": true,
                  "location": 41,
                  "typeName": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 257 1`] = `
[
  "CREATE TABLE hash_heap_float4 (x float4, y int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "hash_heap_float4",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "x",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "float4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "y",
                  "is_local": true,
                  "location": 41,
                  "typeName": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_index.sql > line 263 1`] = `
[
  "CREATE INDEX hash_f8_index2 ON hash_f8_heap USING hash (random float8_ops)
	WITH (fillfactor=9)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "hash",
            "idxname": "hash_f8_index2",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "random",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "opclass": [
                    {
                      "String": {
                        "sval": "float8_ops",
                      },
                    },
                  ],
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 9,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "fillfactor",
                  "location": 82,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 31,
              "relname": "hash_f8_heap",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
